--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
 </head>
 <body>
-<nte-editor></nte-editor>
+<editor-testbed></editor-testbed>
 <script type="module" src="/public/main.ts"></script>
 </body>
 </html>
